<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_location"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="swindroid.suntime.ui.NewLocationActivity">

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_label"/>

    <EditText
        android:id="@+id/locationValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/latitudeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude_label"/>

    <EditText
        android:id="@+id/latitudeValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/longitudeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude_label"/>

    <EditText
        android:id="@+id/longitudeValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/timezoneLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timezone_label"/>

    <EditText
        android:id="@+id/timezoneValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/newLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_location_button_label"/>

</LinearLayout>
